--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-api": "json-server --watch api.json --port 4000"
+    "start-api": "json-server --watch db.json --port 4000"
   },
   "eslintConfig": {
     "extends": [
