--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.5",
     "husky": "^9.1.4",
     "json-server": "^1.0.0-beta.2",
+    "proyecto_node": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
